--- a/styles.css
+++ b/styles.css
@@ -29,9 +29,9 @@ a {
     color: black;
     text-decoration: none;
     box-shadow: inset 0 0 0 0 lightgray;
-    margin: 0 -.25rem;
-    padding: 0 .25rem;
-    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+    margin: 0 -0.25rem;
+    padding: 0 0.25rem;
+    transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 a:hover {
@@ -163,6 +163,7 @@ p {
     }
 
     a:active {
+        transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
         box-shadow: inset 100px 0 0 0 lightgray;
     }
 
@@ -171,6 +172,10 @@ p {
     }
 
     .margin-two {
-        margin: 10px 0;
+        margin: 1.5rem 0;
+    }
+
+    .right-nav {
+        transform: translateX(-50%);
     }
 }
