--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     overflow: hidden;
+    scroll-behavior: smooth;
 }
 
 .container {
@@ -9,6 +10,16 @@ body {
     justify-content: center;
     height: 100vh;
     width: 100vw;
+}
+
+.scroller {
+    height: 100vh;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+}
+  
+.scroller section {
+    scroll-snap-align: start;
 }
 
 section {
